Add main-content, move footer to body, in main content: add about the fair, Fair's picture, Members

--- a/Homepage.html
+++ b/Homepage.html
@@ -33,26 +33,37 @@
                 <p>Welcome to our annual fair! Explore a variety of booths, enjoy fun activities, and make unforgettable memories with friends and family.</p>
             </section>
             <section>
-                <h2>Featured Booths</h2>
+                <h2>Fair's picture</h2>
+                <div class="booth-image"><a>Booth1</a>
+                    <hr>
+                </div>
+                <div class="booth-image"><a>Booth2</a>
+                    <hr>
+                </div>
+                <div class="booth-image"><a>Booth3</a>
+                    <hr>
+                </div>
+                <div class="booth-image"><a>Booth4</a>
+                    <hr>
+                </div>
+            </section>
+            <section>
+                <h2>Members</h2>
                 <ul>
-                    <li>Booth 1: Delicious Food</li>
-                    <li>Booth 2: Fun Games</li>
-                    <li>Booth 3: Arts and Crafts</li>
-                    <li>Booth 4: Live Entertainment</li>
+                    <li><a>ธีรภัทร ใจคำ 6809650044 ทำ <b>Homepage</b></a></li>
+                    <li><a>กิตติทัช ศรศรี 6809650358 ทำ <b>Booth Directory Page</b></a></li>
+                    <li><a>อรจิรา รอดกลึง 6809650135 ทำ <b>Booth1 Page</b></a></li>
+                    <li><a>ณัฏฐนิชา เขียวบุญจันทร์ 6809650465 ทำ <b>Booth2 Page</b></a></li>
+                    <li><a>ภูพิชญา แก่นกระจ่าง 6809650291 ทำ <b>Booth3 Page</b></a></li>
+                    <li><a>จณิตา นาทอง 6809650366 ทำ <b>Booth4 Page</b></a></li>
+                    <li><a>กานต์ ตันสกุล 6809650168 ทำ <b>Registration Page</b></a></li>
+                    <li><a>จิรพัฒน์ แก้วพรม 6809650374 ทำ <b>Feedback Page</b></a></li>
                 </ul>
-            </section>
-            <section>
-                <h2>Get Involved</h2>
-                <p>Interested in participating? Visit our Registration Page to sign up for a booth or volunteer for the event.</p>
-            </section>
-            <section>
-                <h2>Feedback</h2>
-                <p>Your feedback is important to us! Please visit our Leave Your Feedback Page to share your thoughts and suggestions.</p>
             </section>
         </div>
     </div>
+    <div class="footer">
+        <p>© 2024 Fair Webpage. All rights reserved.</p>
+    </div>
 </body>
-<footer class="footer">
-    <p>© 2024 Fair Webpage. All rights reserved.</p>
-</footer>
 </html>
