--- a/Booth1 Page.html
+++ b/Booth1 Page.html
@@ -9,8 +9,26 @@
 </head>
 <body>
     <body class="bgBooth1"></body>
-    <div class= "Heading">🥐Le Delice </div>
     
+
+    <div class="navbar">
+  <div class="logo"> 
+  <img src="img/โลโก้Booth1page.png" alt="Logo Grease & Cheese" title="This is a Logo Grease & Cheese"> 
+  <span class="name_store">Grease & Cheese</span>
+  </div>
+  
+  <div class="menu">
+    <a href="Homepage.html">Homepage</a>
+    <a href="Booth Directory Page.html">Booth Directory</a>
+    <a href="Booth1 Page.html">Booth1</a>
+    <a href="Booth2 Page.html">Booth2</a>
+    <a href="Booth3 Page.html">Booth3</a>
+    <a href="Booth4 Page.html">Booth4</a>
+    <a href="Leave Your Feedback Page.html">Leave Your Feedback</a>
+    <a href="Registration Page.html">Registration</a>
+  </div>
+</div>
+
 
 </body>
 </html>
