add s long junk food image as a background

--- a/Booth1 Page.html
+++ b/Booth1 Page.html
@@ -29,6 +29,9 @@
   </div>
 </div>
 
+   <div class="long_line_of_junk_food">
+   <img src="img/รูปjunk foodแนวนอน.jpg"  alt="A lot of junk food pictures"  title="This is a a lot of junk food"> 
+   </div>
 
 </body>
 </html>
