Add img event in booth4

--- a/Booth4 Page.html
+++ b/Booth4 Page.html
@@ -16,16 +16,25 @@
     <div class="booth">
       <h2>เกมปาลูกโป่ง</h2>
       <p>มาลองความแม่นยำของคุณ แล้วรับของรางวัลสุดแสนจะน่ารักกลับบ้านกัน!</p>
+      <div class="photo">
+        <img src="img/ปาลูกโป่ง.jpeg">
+      </div>
     </div>
 
     <div class="booth">
       <h2>ช้อนปลา</h2>
       <p>มาทดสอบฝีมือกันหน่อยนักช้อนปลาทั้งหลาย!</p>
+      <div class="photo">
+        <img src="img/ช้อนปลา.jpg">
+      </div>
     </div>
 
     <div class="booth">
       <h2>จับฉลาก</h2>
       <p>หากคุณสุ่มการ์ดได้เกลือ ไม่ต้องห่วงสุ่มที่นี่อย่างน้อยก็ต้องได้ของกลับบ้าน!!</p>
+      <div class="photo">
+        <img src="img/จับฉลาก.jpg">
+      </div>
     </div>
   </section>
 
