add more menu bars and experiment with adding images and changing fonts

--- a/Booth1 Page.html
+++ b/Booth1 Page.html
@@ -6,6 +6,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="CSS/Booth1 Page.css">
 
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mogra&display=swap" rel="stylesheet">
+
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Boogaloo&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <body class="bgBooth1"></body>
@@ -29,9 +38,51 @@
   </div>
 </div>
 
+
    <div class="long_line_of_junk_food">
    <img src="img/รูปjunk foodแนวนอน.jpg"  alt="A lot of junk food pictures"  title="This is a a lot of junk food"> 
    </div>
 
-</body>
-</html>
+   <p class="menufood">FOOD MENU</p>
+
+
+<div class="photo">
+  <div class="item">
+    <img src="img/pizza.jpg" alt="Pizza" title="This is a Pizza">
+    <p> Pizza <br><br> 120 Bath </p>
+  </div>
+
+  <div class="item">
+    <img src="img/taco.jpg" alt="Tarte">
+    <p>Tarte</p>
+  </div>
+
+  <div class="item">
+    <img src="resources/millefeuille.jpg" alt="Millefeuille">
+    <p>Millefeuille</p>
+  </div>
+
+  <div class="item">
+    <img src="resources/bear.jpg" alt="Bear Cupcake">
+    <p>Bear Cupcake</p>
+  </div>
+
+  <div class="item">
+    <img src="resources/berries.jpg" alt="Berries">
+    <p>Berries</p>
+  </div>
+
+  <div class="item">
+    <img src="img/pizza.jpg" alt="Canale">
+    <p>Canale</p>
+  </div>
+
+  <div class="item">
+    <img src="resources/madeleine.jpg" alt="Madeleine">
+    <p>Madeleine</p>
+  </div>
+
+  <div class="item">
+    <img src="resources/croissantt.jpg" alt="Croissant">
+    <p>Croissant</p>
+  </div>
