add all photos to the food menu bar

--- a/Booth1 Page.html
+++ b/Booth1 Page.html
@@ -49,40 +49,50 @@
 <div class="photo">
   <div class="item">
     <img src="img/pizza.jpg" alt="Pizza" title="This is a Pizza">
-    <p> Pizza <br><br> 120 Bath </p>
+    <p> Pizza <br><br> 150 Baht </p>
   </div>
 
   <div class="item">
-    <img src="img/taco.jpg" alt="Tarte">
-    <p>Tarte</p>
+    <img src="img/taco.jpg" alt="Taco" title="This is a Taco">
+    <p>Taco <br><br> 130 Baht </p>
   </div>
 
   <div class="item">
-    <img src="resources/millefeuille.jpg" alt="Millefeuille">
-    <p>Millefeuille</p>
+    <img src="img/hotdogbun.jpg" alt="Hotdog Bun" title="This is a Hotdog Bun">
+    <p>Hotdog Bun <br><br> 75 Baht</p>
   </div>
 
   <div class="item">
-    <img src="resources/bear.jpg" alt="Bear Cupcake">
-    <p>Bear Cupcake</p>
+    <img src="img/Sandwich.jpg" alt="Sandwich" title="This is a Sandwich">
+    <p>Sandwich <br><br> 85 Baht</p>
   </div>
 
   <div class="item">
-    <img src="resources/berries.jpg" alt="Berries">
-    <p>Berries</p>
+    <img src="img/Kebab.jpg" alt="Kebab" title="This is a Kebab">
+    <p>Kebab<br><br> 100 Baht</p>
   </div>
 
   <div class="item">
-    <img src="img/pizza.jpg" alt="Canale">
-    <p>Canale</p>
+    <img src="img/Hash Brown.jpg" alt="Hash Brown" title="This is a Hash Brown">
+    <p>Hash Brown <br><br> 70 Baht</p>
   </div>
 
   <div class="item">
-    <img src="resources/madeleine.jpg" alt="Madeleine">
-    <p>Madeleine</p>
+    <img src="img/French Fries.jpg" alt="French Fries" title="This is a French Fries">
+    <p>French Fries <br><br> 60 Baht</p>
   </div>
 
   <div class="item">
-    <img src="resources/croissantt.jpg" alt="Croissant">
-    <p>Croissant</p>
+    <img src="img/Chicken Cheese Pops.jpg" alt="Chicken Cheese Pops" title="This is a Chicken Cheese Pops">
+    <p>Chicken Cheese Pops <br><br> 80 Baht</p>
+  </div>
+
+  <div class="item">
+    <img src="img/Cheese Filled.jpg" alt="Cheese Sticks" title="This is a Cheese Sticks">
+    <p>Cheese Sticks<br><br> 80 Baht</p>
+  </div>
+
+  <div class="item">
+    <img src="img/Caesar salad.jpg" alt="Caesar salad" title="This is a Caesar salad">
+    <p>Caesar salad <br><br> 79 Baht</p>
   </div>
