add the drink menu and the menu bar is complete

--- a/Booth1 Page.html
+++ b/Booth1 Page.html
@@ -43,13 +43,18 @@
    <img src="img/รูปjunk foodแนวนอน.jpg"  alt="A lot of junk food pictures"  title="This is a a lot of junk food"> 
    </div>
 
-   <p class="menufood">FOOD MENU</p>
+   <p class="menufood">FOOD & Drink MENU</p>
 
 
 <div class="photo">
   <div class="item">
     <img src="img/pizza.jpg" alt="Pizza" title="This is a Pizza">
     <p> Pizza <br><br> 150 Baht </p>
+  </div>
+
+  <div class="item">
+  <img src="img/HamBurger.jpg" alt="HamBurger" title="This is a HamBurger">
+    <p> HamBurger <br><br> 150 Baht </p>
   </div>
 
   <div class="item">
@@ -96,3 +101,54 @@
     <img src="img/Caesar salad.jpg" alt="Caesar salad" title="This is a Caesar salad">
     <p>Caesar salad <br><br> 79 Baht</p>
   </div>
+
+  <div class="item">
+    <img src="img/coke.jpg" alt="Coca-Cola" title="This is a Coca-Cola">
+    <p>Coca-Cola <br><br> 30 Baht</p>
+  </div>
+
+  <div class="item">
+    <img src="img/coke zero.jpg" alt="Coca-Cola Zero" title="This is a Coca-Cola Zero">
+    <p>Coca-Cola Zero <br><br> 30 Baht</p>
+  </div>
+
+  <div class="item">
+    <img src="img/coke cherry.jpg" alt="Coca-Cola cherry" title="This is a Coca-Cola cherry">
+    <p>Coca-Cola cherry <br><br> 30 Baht</p>
+  </div>
+
+  <div class="item">
+    <img src="img/Pepsi.jpg" alt="Pepsi" title="This is a Pepsi">
+    <p>Pepsi <br><br> 30 Baht</p>
+  </div>
+
+  <div class="item">
+    <img src="img/Sprite.jpg" alt="Sprite" title="This is a Sprite">
+    <p>Sprite <br><br> 30 Baht</p>
+  </div>
+
+  <div class="item">
+    <img src="img/7up.jpg" alt="7up" title="This is a 7up">
+    <p>7up <br><br> 30 Baht</p>
+  </div>
+
+  <div class="item">
+    <img src="img/Fanta Orange Juice.jpg" alt="Fanta Orange Juice" title="Fanta Orange Juice">
+    <p>Fanta Orange Juice <br><br> 30 Baht</p>
+  </div>
+
+  <div class="item">
+    <img src="img/Mirinda.jpg" alt="Mirinda Citrus" title="This is a Mirinda Citrus">
+    <p>Mirinda Citrus <br><br> 30 Baht</p>
+  </div>
+
+  <div class="item">
+    <img src="img/Water.jpg" alt="Water" title="This is a Water">
+    <p>Water <br><br> 20 Baht</p>
+  </div>
+
+   </div>
+
+
+</body>
+</html>
