Add some products in Booth3

--- a/Booth3 Page.html
+++ b/Booth3 Page.html
@@ -8,13 +8,13 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Yesteryear&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=DynaPuff:wght@400..700&family=Yesteryear&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
 
-    <body class="bgBooth3"></body>
+    <body class="bgBooth3">
 
 
     <div class="bglogo">
@@ -39,7 +39,33 @@
 
     </div>
 
-    
+
+    <div class="frame">
+
+        <div class="blush ">
+            <img src="./img/blush on.png" alt="blush on" title="This is blush on">
+            <p class="textblush">blush on 129 ฿</p>
+        </div>
+
+        <div class="blush ">
+            <img src="./img/lip.jpg" alt="lip" title="This is lip">
+            <p class="textblush">lip 149 ฿</p>
+        </div>
+
+        <div class="blush ">
+            <img src="./img/Eyeshadow Palette.jpg" alt="Eyeshadow" title="This is Eyeshadow">
+            <p class="textblush">Eyeshadow 69 ฿</p>
+        </div>
+
+        <div class="blush ">
+            <img src="./img/Contour.jpg" alt="Contour" title="This is Contour">
+            <p class="textblush">Contour 69 ฿</p>
+        </div>
+
+
+
+    </div>
+    </body>
 
   
     
