--- a/Homepage.html
+++ b/Homepage.html
@@ -10,12 +10,14 @@
 <body>
     <div class ="Heading">
         <button id="sidebarToggle" class="toggle-btn" aria-label="Toggle sidebar" aria-controls="leftSide" aria-expanded="true">☰</button>
-        <p class="title">Our Festival</p>
+        <img src="img/G15_logo.png" class="heading-logo">
+        <p class="heading-title">| G15's Fair</p>
     </div>
     <div class="page">
         <aside id="leftSide" class="left-side">
             <nav>
                 <ul class="side-list">
+                    <img src="img/G15_logo.png" class="side-logo">
                     <li><a href="Homepage.html"><span class="icon">🏠</span><span class="label">Homepage</span></a></li>
                     <li>
                         <a href="Booth Directory Page.html"><span class="icon">📂</span><span class="label">Booth Directory Page</span></a>
@@ -32,6 +34,7 @@
             </nav>
         </aside>
         <div class="main-content">
+            <div class="main-content-container">
             <section>
                 <h2>About the Fair</h2>
                 <p>Welcome to our annual fair! Explore a variety of booths, enjoy fun activities, and make unforgettable memories with friends and family.</p>
@@ -92,8 +95,10 @@
                     <li><a>จิรพัฒน์ แก้วพรม 6809650374 ทำ <b>Feedback Page</b></a></li>
                 </ul>
             </section>
+            </div>
         </div>
     </div>
+    <div class="drawer-backdrop" id="drawerBackdrop"></div>
     <div class="footer">
         <p>Made by G15 Our Festival | © 2025</p>
     </div>
