organize the web page and add a registration icon

--- a/Booth1 Page.html
+++ b/Booth1 Page.html
@@ -34,10 +34,9 @@
     <a href="Booth3 Page.html">Booth3</a>
     <a href="Booth4 Page.html">Booth4</a>
     <a href="Leave Your Feedback Page.html">Leave Your Feedback</a>
-    <a href="Registration Page.html">Registration</a>
+    <a href="Registration Page.html">Registration <img src="img/singin.png" alt="sign in" title="icon sign in" class="icon-register"></a>
   </div>
 </div>
-
 
    <div class="long_line_of_junk_food">
    <img src="img/รูปjunk foodแนวนอน.jpg"  alt="A lot of junk food pictures"  title="This is a a lot of junk food"> 
