add all make up product in Booth 3

--- a/Booth3 Page.html
+++ b/Booth3 Page.html
@@ -49,7 +49,7 @@
 
         <div class="blush ">
             <img src="./img/lip.jpg" alt="lip" title="This is lip">
-            <p class="textblush">lip 149 ฿</p>
+            <p class="textblush">lip 199 ฿</p>
         </div>
 
         <div class="blush ">
@@ -58,11 +58,19 @@
         </div>
 
         <div class="blush ">
-            <img src="./img/Contour.jpg" alt="Contour" title="This is Contour">
-            <p class="textblush">Contour 69 ฿</p>
+            <img src="./img/Powder.jpg" alt="Contour" title="This is Contour">
+            <p class="textblush"> Powder 79 ฿</p>
         </div>
 
+        <div class="blush ">
+            <img src="./img/cushion.jpg" alt="Contour" title="This is Contour">
+            <p class="textblush">cushion 299 ฿</p>
+        </div>
 
+        <div class="blush ">
+            <img src="./img/eyeliner.jpg" alt="Contour" title="This is Contour">
+            <p class="textblush">eyeliner 999 ฿</p>
+        </div>
 
     </div>
     </body>
