Add fonts files,Fix Homepage styles

--- a/Homepage.html
+++ b/Homepage.html
@@ -13,27 +13,24 @@
         <img src="img/G15_logo.png" class="heading-logo">
         <p class="heading-title">| G15's Fair</p>
     </div>
-    <div class="page">
-        <aside id="leftSide" class="left-side">
-            <nav>
-                <ul class="side-list">
-                    <img src="img/G15_logo.png" class="side-logo">
-                    <li><a href="Homepage.html"><span class="icon">🏠</span><span class="label">Homepage</span></a></li>
-                    <li>
-                        <a href="Booth Directory Page.html"><span class="icon">📂</span><span class="label">Booth Directory Page</span></a>
-                        <ul>
-                            <li><a href="Booth1 Page.html"><span class="icon">•</span><span class="label">Booth1 Page</span></a></li>
-                            <li><a href="Booth2 Page.html"><span class="icon">•</span><span class="label">Booth2 Page</span></a></li>
-                            <li><a href="Booth3 Page.html"><span class="icon">•</span><span class="label">Booth3 Page</span></a></li>
-                            <li><a href="Booth4 Page.html"><span class="icon">•</span><span class="label">Booth4 Page</span></a></li>
-                        </ul>
-                    </li>
-                    <li><a href="Registration Page.html"><span class="icon">📝</span><span class="label">Registration Page</span></a></li>
-                    <li><a href="Leave Your Feedback Page.html"><span class="icon">💬</span><span class="label">Leave Your Feedback Page</span></a></li>
-                </ul>
-            </nav>
-        </aside>
-        <div class="main-content">
+    <aside id="leftSide" class="left-side">
+        <nav>
+            <ul class="side-list">
+                <img src="img/G15_logo.png" class="side-logo">
+                <li><a href="Homepage.html"><span class="icon">🏠</span><span class="label">Homepage</span></a></li>
+                <li>
+                <a href="Booth Directory Page.html"><span class="icon">📂</span><span class="label">Booth Directory Page</span></a>
+                    <a href="Booth1 Page.html"><span class="icon">•</span><span class="label">Booth1 Page</span></a>
+                    <a href="Booth2 Page.html"><span class="icon">•</span><span class="label">Booth2 Page</span></a>
+                    <a href="Booth3 Page.html"><span class="icon">•</span><span class="label">Booth3 Page</span></a>
+                    <a href="Booth4 Page.html"><span class="icon">•</span><span class="label">Booth4 Page</span></a>
+                </li>
+                <li><a href="Registration Page.html"><span class="icon">📝</span><span class="label">Registration Page</span></a></li>
+                <li><a href="Leave Your Feedback Page.html"><span class="icon">💬</span><span class="label">Leave Your Feedback Page</span></a></li>
+            </ul>
+        </nav>
+    </aside>
+        <section class="main-content">
             <div class="main-content-container">
             <section>
                 <h2>About the Fair</h2>
@@ -48,6 +45,9 @@
                             <img src="img/pizza_booth.png" class="Homepage-picture">
                             <img src="img/taco_booth.png" class="Homepage-picture">
                             <img src="img/pizza_booth.png" class="Homepage-picture">
+                            <img src="img/nothingfiles.png" class="Homepage-picture">
+                            <img src="img/nothingfiles.png" class="Homepage-picture">
+                            <img src="img/nothingfiles.png" class="Homepage-picture">
                         </div>
                     </div>
                 </div>
@@ -55,6 +55,9 @@
                     <hr>
                     <div class="booth1-img">
                         <div class ="booth-image-content">
+                            <img src="img/nothingfiles.png" class="Homepage-picture">
+                            <img src="img/nothingfiles.png" class="Homepage-picture">
+                            <img src="img/nothingfiles.png" class="Homepage-picture">
                             <img src="img/nothingfiles.png" class="Homepage-picture">
                             <img src="img/nothingfiles.png" class="Homepage-picture">
                             <img src="img/nothingfiles.png" class="Homepage-picture">
@@ -68,6 +71,9 @@
                             <img src="img/nothingfiles.png" class="Homepage-picture">
                             <img src="img/nothingfiles.png" class="Homepage-picture">
                             <img src="img/nothingfiles.png" class="Homepage-picture">
+                            <img src="img/nothingfiles.png" class="Homepage-picture">
+                            <img src="img/nothingfiles.png" class="Homepage-picture">
+                            <img src="img/nothingfiles.png" class="Homepage-picture">
                         </div>
                     </div>
                 </div>
@@ -78,11 +84,14 @@
                             <img src="img/nothingfiles.png" class="Homepage-picture">
                             <img src="img/nothingfiles.png" class="Homepage-picture">
                             <img src="img/nothingfiles.png" class="Homepage-picture">
+                            <img src="img/nothingfiles.png" class="Homepage-picture">
+                            <img src="img/nothingfiles.png" class="Homepage-picture">
+                            <img src="img/nothingfiles.png" class="Homepage-picture">
                         </div>
                     </div>
                 </div>
             </section>
-            <section>
+            <section class="Members">
                 <h2>Members</h2>
                 <ul>
                     <li><a>ธีรภัทร ใจคำ 6809650044 ทำ <b>Homepage</b></a></li>
@@ -96,7 +105,7 @@
                 </ul>
             </section>
             </div>
-        </div>
+        </section>
     </div>
     <div class="drawer-backdrop" id="drawerBackdrop"></div>
     <div class="footer">
