complete horizontal menu bar design

--- a/Booth1 Page.html
+++ b/Booth1 Page.html
@@ -19,15 +19,15 @@
 <body>
     <body class="bgBooth1"></body>
     
-
     <div class="navbar">
+      
   <div class="logo"> 
   <img src="img/โลโก้Booth1page.png" alt="Logo Grease & Cheese" title="This is a Logo Grease & Cheese"> 
   <span class="name_store">Grease & Cheese</span>
   </div>
   
   <div class="menu">
-    <a href="Homepage.html">Homepage</a>
+    <a href="index.html">Homepage</a>
     <a href="Booth Directory Page.html">Booth Directory</a>
     <a href="Booth1 Page.html">Booth1</a>
     <a href="Booth2 Page.html">Booth2</a>
