change index to homepage

--- a/Booth1 Page.html
+++ b/Booth1 Page.html
@@ -27,7 +27,7 @@
   </div>
   
   <div class="menu">
-    <a href="index.html">Homepage</a>
+    <a href="homepage.html">Homepage</a>
     <a href="Booth Directory Page.html">Booth Directory</a>
     <a href="Booth1 Page.html">Booth1</a>
     <a href="Booth2 Page.html">Booth2</a>
