fixed the menu bar to be on the side

--- a/Booth1 Page.html
+++ b/Booth1 Page.html
@@ -28,7 +28,7 @@
     <ul class="side-list1">
       <img src="img/โลโก้Booth1page.png" class="side-logo1" alt="Booth1 Logo">
 
-      <li><a href="./index.html"><span class="icon">🏠</span><span class="label">Homepage</span></a></li>
+      <li><a href="homepage.html"><span class="icon">🏠</span><span class="label">Homepage</span></a></li>
 
       <li>
         <a href="./Booth Directory Page.html"><span class="icon1">📂</span><span class="label">Booth Directory Page</span></a>
