--- a/Booth2 Page.html
+++ b/Booth2 Page.html
@@ -142,6 +142,24 @@
         </div>
 
   </section>
+  <div class="menu-btn" onclick="toggleMenu()">☰</div>
+
+  <div id="sidebar" class="sidebar">
+    <a href="homepage.html">Homepage</a>
+    <a href="Booth Directory Page.html"">Booth Directory</a>
+    <a href="Booth1 Page.html">Booth1 </a>
+    <a href="Booth2 Page.html">Booth2 </a>
+    <a href="Booth3 Page.html">Booth3</a>
+    <a href="Booth4 Page.html">Booth4</a>
+    <a href="Registration Page.html">Registration</a>
+    <a href="Leave Your Feedback Page.html">Leave Your Feedback</a>
+   </div>
+
+  <script>
+  function toggleMenu() {
+    document.getElementById("sidebar").classList.toggle("open");
+  }
+  </script>
 
   <footer>
     <p><a href="Booth1 Page.html">Booth2 Page</a> 
