Add burgerbooth.jpg, Add more booth-1-img in Homepage

--- a/homepage.html
+++ b/homepage.html
@@ -44,7 +44,7 @@
                         <div class ="booth-image-content">
                             <img src="img/pizza_booth.png" class="Homepage-picture">
                             <img src="img/taco_booth.png" class="Homepage-picture">
-                            <img src="img/pizza_booth.png" class="Homepage-picture">
+                            <img src="img/bugerbooth.jpg" class="Homepage-picture">
                             <img src="img/nothingfiles.png" class="Homepage-picture">
                             <img src="img/nothingfiles.png" class="Homepage-picture">
                             <img src="img/nothingfiles.png" class="Homepage-picture">
