Add image files,Add more booth image

--- a/homepage.html
+++ b/homepage.html
@@ -36,61 +36,47 @@
                 <h2>About the Fair</h2>
                 <p>Welcome to our annual fair! Explore a variety of booths, enjoy fun activities, and make unforgettable memories with friends and family.</p>
             </section>
+            <hr>
             <section>
                 <h2>Fair's picture</h2>
-                <div class="booth-image"><a>Booth1 : Foods Fair</a>
-                    <hr>
+                <div class="booth-image"><a>Booth1 : Grease & Cheese</a>
                     <div class="booth-img">
                         <div class ="booth-image-content">
                             <img src="img/pizza_booth.png" class="Homepage-picture">
                             <img src="img/taco_booth.png" class="Homepage-picture">
-                            <img src="img/bugerbooth.jpg" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
+                            <img src="img/burgerbooth.jpg" class="Homepage-picture">
                         </div>
                     </div>
                 </div>
-                <div class="booth-image"><a>Booth2 : </a>
-                    <hr>
+                <div class="booth-image"><a>Booth2 : KANOMWHANNN</a>
                     <div class="booth1-img">
                         <div class ="booth-image-content">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
+                            <img src="img/cakebooth1.jpg" class="Homepage-picture">
+                            <img src="img/cakebooth2.jpg" class="Homepage-picture">
+                            <img src="img/cakebooth3.jpg" class="Homepage-picture">
                         </div>
                     </div>
                 </div>
-                <div class="booth-image"><a>Booth3 : </a>
-                    <hr>
+                <div class="booth-image"><a>Booth3 : Make Up</a>
                     <div class="booth1-img">
                         <div class ="booth-image-content">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
+                            <img src="img/makeupbooth1.jpg" class="Homepage-picture">
+                            <img src="img/makeupbooth2.jpg" class="Homepage-picture">
+                            <img src="img/makeupbooth3.jpg" class="Homepage-picture">
                         </div>
                     </div>
                 </div>
-                <div class="booth-image"><a>Booth4 : </a>
-                    <hr>
+                <div class="booth-image"><a>Booth4 : Activities Booth</a>
                     <div class="booth1-img">
                         <div class ="booth-image-content">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
-                            <img src="img/nothingfiles.png" class="Homepage-picture">
+                            <img src="img/activebooth1.jpg" class="Homepage-picture">
+                            <img src="img/activebooth2.jpg" class="Homepage-picture">
+                            <img src="img/activebooth3.jpg" class="Homepage-picture">
                         </div>
                     </div>
                 </div>
             </section>
+            <hr>
             <section class="Members">
                 <h2>Members</h2>
                 <ul>
