Add logo and fixed toggle btn

--- a/Booth4 Page.html
+++ b/Booth4 Page.html
@@ -17,6 +17,7 @@
         <aside id="leftSide" class="left-side">
         <nav>
             <ul class="side-list">
+                <img src="img/G15_logo.png" class="side-logo">
                 <li><a href="Homepage.html"><span class="icon">🏠</span><span class="label">Homepage</span></a></li>
                 <li>
                 <a href="Booth Directory Page.html"><span class="icon">📂</span><span class="label">Booth Directory Page</span></a>
@@ -44,7 +45,7 @@
            <div class="booth">
                <h2>ช้อนปลา</h2>
                <p>มาทดสอบฝีมือกันหน่อยนักช้อนปลาทั้งหลาย!</p>
-               <P>≫เริ่มต้น 4 ดอก 20≪</P>
+               <P>≫เริ่มต้น 4 ไม้ 20≪</P>
                <div class="photo">
                  <img src="img/ช้อนปลา.jpg">
                </div>
@@ -53,7 +54,7 @@
            <div class="booth">
               <h2>จับฉลาก</h2>
               <p>หากคุณสุ่มการ์ดได้เกลือ ไม่ต้องห่วงสุ่มที่นี่อย่างน้อยก็ต้องได้ของกลับบ้าน!!</p>
-              <P>≫ช็อปครบ 50 จับได้1ครั้ง≪</P>
+              <P>≫ช็อปครบ 50 จับได้ 1ครั้ง≪</P>
               <div class="photo">
                  <img src="img/จับฉลาก.jpg">
               </div>
