--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,6 @@
     <div class ="Heading">
         <button id="sidebarToggle" class="toggle-btn" aria-label="Toggle sidebar" aria-controls="leftSide" aria-expanded="true">☰</button>
         <img src="img/G15_logo.png" class="heading-logo">
-        <p class="heading-title">| G15's Fair</p>
     </div>
     <aside id="leftSide" class="left-side">
         <nav>
@@ -33,8 +32,8 @@
         <section class="main-content">
             <div class="main-content-container">
             <section>
-                <h2>About the Fair</h2>
-                <p>Welcome to our annual fair! Explore a variety of booths, enjoy fun activities, and make unforgettable memories with friends and family.</p>
+                <h2>🌒Dreamy Cloud Festival☁️</h2>
+                <p>Welcome to Dreamy Cloud Festival! Explore a variety of booths, enjoy fun activities, and make unforgettable memories with friends and family.</p>
             </section>
             <hr>
             <section>
@@ -95,7 +94,7 @@
     </div>
     <div class="drawer-backdrop" id="drawerBackdrop"></div>
     <div class="footer">
-        <p>Made by G15 Our Festival | © 2025</p>
+        <p>Group 15</p>
     </div>
 </body>
 </html>
