add logo to Booth Dired

--- a/Booth Directory Page.html
+++ b/Booth Directory Page.html
@@ -15,11 +15,13 @@
         <div class="q q3"></div>
         <div class="q q4"></div>
     </div>
-    
+
     <div class="content-grid" aria-label="Booth directory">
-        <div class="cell c1"><a href="Booth1 Page.html">Booth 1</a></div>
+        <div class="cell c1"><a href="Booth1 Page.html">Booth 1 <img src="img/โลโก้Booth1page.png" alt="Booth 1 logo"
+                    class="booth-logo"></a></div>
         <div class="cell c2"><a href="Booth2 Page.html">Booth 2</a></div>
-        <div class="cell c3"><a href="Booth3 Page.html">Booth 3</a></div>
+        <div class="cell c3"><a href="Booth3 Page.html">Booth 3 <img src="img/logo b3.png" alt="Booth 3 logo"
+                    class="booth-logo"></a></div>
         <div class="cell c4"><a href="Booth4 Page.html">Booth 4</a></div>
     </div>
 
